# guile-xcb

./: .gitignore  Makefile.am  README  README-in.org  configure.ac  guile-xcb.texi
flow/: Makefile.am
language/: Makefile.am
language/xml-xcb/: Makefile.am  compile-scheme.scm  enum.scm  records.scm  spec.scm  struct.scm  type.scm  union.scm
xcb/: Makefile.am  auth.scm  connection.scm  core.scm  doc.scm  enum.scm  event-loop.scm  extension-support.scm  records.scm  struct.scm  switch-test.scm  test.scm  type.scm  union.scm  xml.scm
xcb/sample/: Makefile.am  randr.scm  tinywm.scm  win.scm
xcb/xml/: Makefile.am  connection.scm  extension-support.scm
